--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,27 @@
 {
-  "name": "server",
+  "name": "assignment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.9",
+    "nodemon": "^3.1.4",
+    "prisma": "^5.16.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3"
+  },
   "dependencies": {
     "@prisma/client": "^5.16.1",
-    "cors": "^2.8.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
